--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,16 @@
 	  <artifactId>sax</artifactId>
 	  <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>3.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>3.5.2</version>
+      <classifier>models</classifier>
+    </dependency>
   </dependencies>
 </project>
