--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
       <version>3.5.2</version>
       <classifier>models</classifier>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.2</version>
+    </dependency>
   </dependencies>
 </project>
