--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 	  <version>2.0.1</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-snowball</artifactId>
+      <version>3.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>edu.stanford.nlp</groupId>
       <artifactId>stanford-corenlp</artifactId>
       <version>3.5.2</version>
