--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ ipg*.xml
 /data/partialindices/tmp*.txt
 /data/partialindices/index*.txt
 /data/partialindices/post*.txt
+
+# project metadata
+.idea/
+.settings/
