--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ ipg*.xml
 /data/partialindices/tmp*.txt
 /data/partialindices/index*.txt
 /data/partialindices/post*.txt
+cache*.txt
 
 # project metadata
 .idea/
